--- a/noice.html
+++ b/noice.html
@@ -1,12 +1,36 @@
 <h1>SUCCESS</h1>
   <p>Success is something we all strive for.</p>
+  <a href="https://www.tiktok.com/"target="_blank">SUCCESS</a>
+  <button class="success-button">1+ SUCCESS</button>
+
 <h2>PRACTICE</h2>
   <p>Practice is a great way to improve and excel at work that one is doing, practicing improves skill and blah blah blah</p>
+
 
   <a href="https://www.youtube.com/" target="_blank">PRACTICE NOW</a>
 <button class="practice-button">1+ PRACTICE</button>
 
 <style>
+    
+    .success-button {
+        background-color: rgb(0, 223, 0);
+        color: white;
+        border: none;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        cursor: pointer;
+        margin-left: 10px;
+        transition: 0.15s;
+    }
+
+    .success-button:hover {
+        opacity: 0.8;
+    }
+
+    .success-button:active {
+        opacity: 0.5;
+    }
+
     .practice-button {
         background-color: red;
         color: white;
